--- a/tsos.css
+++ b/tsos.css
@@ -1,7 +1,7 @@
 /* TSOS.css */
 
 body {
-  background: #909193 url(distrib/images/linen.png) repeat;
+  background: #cccdcf;
   font-family: Helvetica, Verdana, Arial, sans-serif;
   font-size: 12pt;
   font-weight: normal;
@@ -38,6 +38,48 @@ h3 {
 
 .normal_button {
   width: 100px;
+  color: #494949;
+  border: 4px solid #494949 !important;
+  background-color: #FFFFFF;
+}
+
+input[type=button] {
+  width: 100px;
+  height: 50px;
+
+  margin-right: 25px;
+
+  font-size: 13px;
+  font-weight: 700;
+
+  color: #494949;
+  border: 4px solid #494949 !important;
+  border-radius: 2px; 
+  background-color: #FFFFFF;
+
+  transition: all 0.4s ease 0s;
+}
+
+input[type=button]:hover {
+  color: #ffffff !important;
+  background: #f6b93b;
+  border-color: #f6b93b !important;
+  transition: all 0.4s ease 0s;
+}
+
+#btnStartOS:hover {
+  background: #00CC66;
+  border-color: #00CC66 !important;
+}
+
+#btnHaltOS:hover {
+  background: #FF3333;
+  border-color: #FF3333 !important;
+}
+
+#btnReset:hover {
+  background: #f6b93b;
+  border-color: #f6b93b !important;
 }
 
 .footerText {
@@ -50,9 +92,15 @@ h3 {
 .consoleTaskBar {
   width: 500px; 
   height: 45px; 
+
+  font-size: 13px;
+  font-weight: 700;
+
+  text-transform: uppercase;
   
-  background-color: #C9C5B0; 
-  border: 2px solid red;
+  border: 4px solid #494949 !important;
+  border-radius: 1px; 
+  background-color: #FFFFFF;
   border-bottom: none;
 
   float: left;
@@ -60,15 +108,23 @@ h3 {
 
 #taskbar li {
   display: inline;
+
+  margin: 0 auto;
+  padding-top: 2px;
 }
 
-.canvasWrapper {
-  height: 500px;
-  width: 500px;
-  overflow: auto;
+#display {
+  border: 4px solid #494949 !important;
+  border-radius: 1px; 
+  background-color: #A9A9A9;
+  border-top: none;
+}
 
-  border: 2px solid red;
-  background-color:#DFDBC3;
+label {
+  font-size: 13px;
+  font-weight: 700;
+
+  color: #494949;
 }
 
 
