--- a/tsos.css
+++ b/tsos.css
@@ -160,7 +160,7 @@ input[type=button]:hover {
 
 .os-wrapper {
   display: grid;
-  grid-template-columns: 40% 60%;
+  grid-template-columns: 30% 70%;
   grid-template-rows: 50vw;
   grid-gap: 1em;
 }
@@ -223,7 +223,7 @@ table {
 
 .hardware-wrapper {
   display: grid;
-  grid-template-columns: 28% 72%;
+  grid-template-columns: 20% 40% 40%;
   grid-template-rows: 50vw;
   grid-gap: 1em;  
 }
@@ -241,7 +241,6 @@ table {
 
 tbody {
   width: auto;
-
   text-align: center;
 }
 
@@ -260,17 +259,54 @@ tbody {
   margin-top: 2em;
 }
 
+#divHD {
+  display: block;
+  border: none;
+}
+
+#tableHD {
+  width: 450px;
+  table-layout: fixed;
+}
+
+#tableHD thead {
+  background-color: #737373;
+  border: 4px solid #494949;
+}
+
+#tableHD thead th {
+  background-color: #A9A9A9;
+
+  position: sticky;
+  top: 0;
+  z-index: 2;
+}
+
+#table-wrapper {
+  height: 674px;
+  width: 450px;
+
+  border-top: 4px solid #494949;
+  border-bottom: 4px solid #494949;
+
+  overflow-y: auto;
+}
+
 #tableP {
   width: 270px; 
 }
 
 #divCPU {
   height: 33px;
-  margin-top: 5px;
 }
 
 #tableCPU {
   width: 270px;
+}
+
+.horizontal-scroll {
+  overflow: scroll;
+  overflow-y: hidden;
 }
 
 /* Information Display */
