Subtle Hard Drive Display Adjustments

--- a/tsos.css
+++ b/tsos.css
@@ -282,14 +282,16 @@ tbody {
   z-index: 2;
 }
 
+#table-container {
+  width: 450px;
+}
+
 #table-wrapper {
-  height: 674px;
+  height: 677px;
   width: 450px;
 
-  border-top: 4px solid #494949;
-  border-bottom: 4px solid #494949;
-
   overflow-y: auto;
+  overflow-x: scroll;
 }
 
 #tableP {
